# datasium

./: README.md  pyproject.toml  sample.csv
src/datasium/: __init__.py  calculate.py  cluster.py  dataset.py  edit.py  filter.py  plot.py  preprocess.py  query.py  remove.py  transform.py  write.py
src/datasium/ui/: __init__.py  app.py
tests/: test_calculate.py  test_cluster.py  test_dataset.py  test_edit.py  test_filter.py  test_plot.py  test_preprocess.py  test_query.py  test_remove.py  test_transform.py  test_write.py
