[project]
name = "datasium"
version = "0.1.0"
description = "A visual data-workhouse built on Polars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nicegui[plotly]>=3.14.0",
    "polars>=1.42.1",
    "plotly>=5.0",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "pytest>=9",
]

[project.scripts]
datasium = "datasium.ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasium"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
