[project]
name = "datasium"
version = "0.1.0"
description = "A visual data-workhouse built on Polars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nicegui[plotly]>=3.14.0",
    "polars>=1.42.1",
    "plotly>=5.0",
    "numpy>=2.2.6",
    "scikit-learn>=1.6",
    "fastavro>=1.9",
    "fastexcel>=0.7",
    "xlsxwriter>=3.2",
    "connectorx>=0.4",
    "adbc-driver-manager>=1.2",
    "pyiceberg>=0.8",
    "pyperclip>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=9",
]

[project.scripts]
datasium = "datasium.ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasium"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
